# ipdss

./: .gitignore
ipdss/: .cproject  (+4 more)
ipdss_rpico/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmotor.cpp  cmotor.h  cpid.h  ipdss_rpico.dis  ipdss_rpico.elf  ipdss_rpico.elf.map  ipdss_rpico.hex  ipdss_rpico.uf2  main.c  main.cpp  pisystick.cpp
ipdss_rpico/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
ipdss_rpico/elf2uf2/boot_uf2_headers/: Makefile
ipdss_rpico/pico-sdk/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/docs/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
ipdss_rpico/pico-sdk/tools/: Makefile  cmake_install.cmake
rpico_test/: .gitignore  CMakeLists.txt  cmake_install.cmake  cpid.cpp  main.c  motor.h  pisystick.c  pisystick.h  rpico_test.dis  rpico_test.elf  rpico_test.elf.map  rpico_test.hex  rpico_test.uf2
rpico_test/libs/rotary-encoder/: rotary_encoder.c  rotary_encoder.h
(+145 files in other folders)
